# slope-ski

./: .gitignore  Cargo.toml  Trunk.toml  build-css.sh  index.html  input.css  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
.github/workflows/: deploy.yml
.vercel/: project.json
alkanes/synth-pool/: Cargo.toml
alkanes/synth-pool/src/: lib.rs  math.rs
alkanes/synth-pool/src/tests/: mod.rs  tests.rs
crates/slope-frontend/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js  vercel.json
crates/slope-frontend/public/: custom.css
crates/slope-frontend/src/: dashboard.rs  farm.rs  header.rs  home.rs  landing.rs  lib.rs  main.rs  pool.rs  pool_details.rs  pool_swap.rs  stake.rs  state.rs  swap.rs  token.rs  withdraw.rs
crates/slope-macros/: Cargo.toml
crates/slope-macros/src/: lib.rs
crates/slope-tests/: Cargo.toml
crates/slope-tests/.cargo/: config.toml
crates/slope-tests/src/: mock.rs
e2e/: pool.spec.ts  swap.spec.ts
proxy/: package.json  proxy.js
public/: index.html  style.css
reference/buffer-redux-1.0.2/: Cargo.toml
reference/deezel-asc/: Cargo.toml
reference/deezel-asc/src/: base64.rs  lib.rs
reference/deezel-common/: Cargo.toml
reference/deezel-common/src/: chain.rs  lib.rs  net.rs  prelude.rs  provider.rs  wallet.rs
reference/deezel-web/: Cargo.toml
reference/deezel-web/src/: crypto.rs  lib.rs  logging.rs  network.rs  parser.rs  provider.rs  provider_traits.rs  provider_traits_extended.rs  storage.rs  time.rs  utils.rs  wallet_provider.rs
reference/slice-ring-buffer-wasm-shim/: Cargo.toml
reference/slice-ring-buffer-wasm-shim/src/: lib.rs
slope-ski-rebuild/: Cargo.toml  README.md  Trunk.toml
slope-ski-rebuild/src/: farm.rs  lib.rs  main.rs  pool.rs  state.rs
slope-ski-rebuild/src/components/: layout.rs
slope-ski-rebuild/src/pages/: farm.rs  mod.rs  pool.rs  swap.rs
slope-ski/reference/deezel-asc/src/armor/: reader.rs
slope-ski/reference/deezel-asc/src/base64/: decoder.rs  reader.rs
src/: dashboard.rs  farm.rs  footer.rs  header.rs  lib.rs  main.rs  nav_link.rs  pool.rs  stake.rs  state.rs  token.rs
test-results/: .last-run.json
test-results/pool-pool-page-functionality/: error-context.md
test-results/swap-swap-functionality/: error-context.md
tests/: e2e.rs
