[package]
name = "slope-ski"
version = "0.1.0"
edition = "2021"
description = "SLOPE protocol"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [".", "crates/*", "alkanes/*", "crates/slope-macros"]

[workspace.dependencies]
leptos = { version = "0.6.12", features = ["csr"] }
bitcoin = { version = "0.32.6", features = ["rand"] }
anyhow = "1.0.91"
leptos_router = { version = "0.6.12", features = ["csr"] }
alkanes-support = { path = "./reference/alkanes-rs/crates/alkanes-support" }
alkanes-runtime = { path = "./reference/alkanes-rs/crates/alkanes-runtime" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew", package = "metashrew-support" }
protorune-support = { path = "./reference/alkanes-rs/crates/protorune-support" }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", package = "metashrew-core" }
alkanes = { path = "./reference/alkanes-rs" }
protorune = { path = "./reference/alkanes-rs/crates/protorune" }
