[package]
name = "deezel-asc"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["dep:thiserror"]

[dependencies]
anyhow = "1.0"
thiserror = { workspace = true, optional = true }
nom = "7.1"
crc24 = "0.1.6"
buffer-redux = { version = "1.0.2", features = ["slice-deque"] }
base64 = "0.22"

[dev-dependencies]
pretty_assertions = "1.0"