[package]
name = "deezel-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
bitcoin = { version = "0.32.6", features = ["serde"] }
deezel-asc = { path = "../deezel-asc" }

[features]
default = []
std = []
native-deps = []
wasm-inspection = []
web-compat = []